--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>YOUR NAME — Portfolio (Data · Risk · Consulting)</title>
+  <title>Lavan Ragulan — Portfolio</title>
   <meta name="description" content="Portfolio showcasing projects across data, risk, and consulting — with case studies, skills, and writing samples." />
   <meta property="og:title" content="Lavan Ragulan — Portfolio" />
   <meta property="og:description" content="Projects and case studies across data, risk, and consulting." />
@@ -146,7 +146,7 @@
 <body>
   <header>
     <div class="container nav" role="navigation" aria-label="Main">
-      <div class="brand"><span class="dot" aria-hidden="true"></span><span>YOUR NAME</span></div>
+      <div class="brand"><span class="dot" aria-hidden="true"></span><span>Lavan Ragulan</span></div>
       <nav class="navmenu">
         <a href="#projects" class="btn ghost">Projects</a>
         <a href="#experience" class="btn ghost">Experience</a>
@@ -161,35 +161,33 @@
 
   <main class="container">
     <!-- ===============================
-         HERO
-         Replace placeholders below.
-         Keep the tagline concise.
+    Tagline
     =================================-->
     <section class="hero" id="home">
-      <h1>Analytics generalist: <span class="nowrap">Data · Risk · Consulting</span></h1>
-      <p class="lead">I turn messy data into decisions. My work spans predictive modeling, risk evaluation, and strategy cases — translating numbers into clarity and action.</p>
+      <h1><span class="nowrap">Analytics Specialist.</span></h1>
+      <p class="lead">Harmonizing data, risk, and strategy.</p>
       <div class="quicklinks">
-        <a class="btn" href="mailto:you@example.com">✉️ Email</a>
-        <a class="btn" href="https://www.linkedin.com/in/your-link" target="_blank" rel="noopener">in/LinkedIn</a>
-        <a class="btn" href="https://github.com/your-handle" target="_blank" rel="noopener">GitHub</a>
+        <a class="btn" href="mailto:lavanragulan@gmail.com">✉️ Email</a>
+        <a class="btn" href="https://www.linkedin.com/in/lavanragulan/" target="_blank" rel="noopener">LinkedIn</a>
+        <a class="btn" href="https://github.com/lavanragulan/lavanragulan.github.io" target="_blank" rel="noopener">GitHub</a>
         <a class="btn" href="#projects">↓ View Projects</a>
       </div>
       <div class="badges" aria-label="quick skill badges">
         <span class="badge">Python</span>
+        <span class="badge">R</span>
+        <span class="badge">SQL</span>
+        <span class="badge">VBA</span>
+        <span class="badge">SAS</span>
         <span class="badge">SQL</span>
         <span class="badge">Power BI</span>
-        <span class="badge">Excel/VBA</span>
-        <span class="badge">scikit-learn</span>
-        <span class="badge">Risk Modeling</span>
-        <span class="badge">Strategy Frameworks</span>
+        <span class="badge">Excel</span>
       </div>
     </section>
 
     <!-- ===============================
          PROJECTS
-         Tag each project with data-tags="data risk consulting" as needed.
-         Fill links for GitHub/Report/Live as appropriate.
     =================================-->
+    
     <section id="projects">
       <h2 class="section-title">Highlighted Projects</h2>
       <div class="filters" role="toolbar" aria-label="Project filters">
@@ -202,9 +200,9 @@
       <div class="grid cols-3" id="projectGrid">
         <!-- Project 1 -->
         <article class="card project" data-tags="data">
-          <h3>House Prices ML — Regularization & Feature Engineering</h3>
-          <p class="meta">Python · scikit-learn · LASSO/Ridge · PCA · MICE</p>
-          <p>Built an end‑to‑end regression pipeline with imputation, feature engineering (e.g., TotalSF), and model selection via cross‑validation. Delivered a top‑quartile leaderboard score and a clear, reproducible notebook.</p>
+          <h3>House Prices Machine Learning — Regularization Methods & Feature Engineering</h3>
+          <p class="meta">Python · pandas · scikit-learn · LASSO/Ridge · Decision Tree Learning · ElasticNet</p>
+          <p>Built an end‑to‑end regression pipeline with imputation, feature engineering, and model selection via cross‑validation. Delivered a top‑quartile leaderboard score and a clear, reproducible notebook.</p>
           <div class="tags"><span class="tag">Data</span><span class="tag">ML</span><span class="tag">Regression</span></div>
           <p>
             <a href="#" target="_blank" rel="noopener">GitHub</a> ·
@@ -213,66 +211,43 @@
         </article>
 
         <!-- Project 2 -->
-        <article class="card project" data-tags="risk">
-          <h3>Scenario Reserving & Loss Driver Analysis</h3>
-          <p class="meta">Excel/VBA · Python · Actuarial · Time Series</p>
-          <p>Presented scenario‑based reserving analyses and large‑loss investigations to senior leaders. Translated technical outputs into rate implications and portfolio actions.</p>
-          <div class="tags"><span class="tag">Risk</span><span class="tag">Actuarial</span><span class="tag">Scenario Modeling</span></div>
+        <article class="card project" data-tags="data">
+          <h3>AI Job Market Salary Predictions</h3>
+          <p class="meta">Python · pandas · numpy · matplotlib · scikit-learn · statsmodels · PCA · Predictive Modeling</p>
+          <p>Built and trained a salary prediction model in Python, applying feature engineering, OLS, and forward stepwise selection.</p>
+          <div class="tags"><span class="tag">data</span><span class="tag">ML</span><span class="tag">Scenario Modeling</span></div>
           <p>
-            <a href="#" target="_blank" rel="noopener">Slides</a>
+            <a href="#" target="_blank" rel="noopener">Github</a> ·
+            <a href="#" target="_blank" rel="noopener">Report</a>
           </p>
         </article>
 
         <!-- Project 3 -->
         <article class="card project" data-tags="consulting">
           <h3>PathAI Ethics Audit — Strategy & Governance</h3>
-          <p class="meta">DELTA+ · SWOT · AI Ethics (MMA803)</p>
-          <p>Audited a healthcare AI tool across fairness, privacy, accountability, and transparency. Produced recommendations, a governance checklist, and a stakeholder‑ready summary memo.</p>
+          <p class="meta">Powerpoint · AI Ethics · Research · Strategy · Stakeholder Relations</p>
+          <p>Audited a healthcare AI tool across beneficence, fairness, privacy, accountability, and transparency. Produced recommendations, a governance checklist, and a stakeholder‑ready summary memo.</p>
           <div class="tags"><span class="tag">Consulting</span><span class="tag">Ethics</span><span class="tag">Frameworks</span></div>
           <p>
-            <a href="#" target="_blank" rel="noopener">Brief</a>
+            <a href="#" target="_blank" rel="noopener">Slides</a> ·
+            <a href="#" target="_blank" rel="noopener">Report</a>
           </p>
         </article>
 
         <!-- Project 4 -->
         <article class="card project" data-tags="data consulting">
-          <h3>Customer Churn Dashboard & Playbook</h3>
-          <p class="meta">Power BI · SQL · Stakeholder Storytelling</p>
-          <p>Built a decision dashboard and an executive playbook linking churn segments to actionable retention levers. Reduced time‑to‑insight and aligned teams on KPIs.</p>
+          <h3>TTC Procurement Process Audit</h3>
+          <p class="meta">Research · DELTA+ · SWOT · Implementations  · Recommendations</p>
+          <p>Investigated the strengths and shortcomings for the usage of analytical procedures for the TTC's procurement. Provided recommendations and an implementation plan to increase analytical agility.</p>
           <div class="tags"><span class="tag">Data</span><span class="tag">Consulting</span><span class="tag">BI</span></div>
           <p>
             <a href="#" target="_blank" rel="noopener">Demo</a>
           </p>
         </article>
 
-        <!-- Project 5 -->
-        <article class="card project" data-tags="risk data">
-          <h3>Transaction Monitoring — Anomaly Detection</h3>
-          <p class="meta">Python · Isolation Forest · Risk Scoring</p>
-          <p>Built an anomaly pipeline to flag suspicious patterns, prioritize alerts, and document decisions. Improved precision at top‑k and reduced false positives.</p>
-          <div class="tags"><span class="tag">Risk</span><span class="tag">Data</span><span class="tag">AML</span></div>
-          <p>
-            <a href="#" target="_blank" rel="noopener">GitHub</a> ·
-            <a href="#" target="_blank" rel="noopener">Report</a>
-          </p>
-        </article>
-
-        <!-- Project 6 (example writing-heavy consulting case) -->
-        <article class="card project" data-tags="consulting">
-          <h3>Market Entry Case — Sizing & 3 Horizons</h3>
-          <p class="meta">Case Structuring · TAM/SAM/SOM · 3 Horizons</p>
-          <p>Framed a market entry for a SaaS fintech, quantified opportunity size, and sequenced bets across H1/H2/H3 with risks, assumptions, and KPIs.</p>
-          <div class="tags"><span class="tag">Consulting</span><span class="tag">Strategy</span></div>
-          <p>
-            <a href="#" target="_blank" rel="noopener">Deck</a>
-          </p>
-        </article>
-      </div>
-    </section>
-
     <!-- ===============================
          EXPERIENCE
-         Keep bullets results-oriented and concise.
+
     =================================-->
     <section id="experience">
       <h2 class="section-title">Experience</h2>
@@ -352,14 +327,14 @@
       <h2 class="section-title">Contact</h2>
       <div class="card">
         <p><strong>Based in:</strong> City, Country · Open to roles in Data, Risk, and Consulting</p>
-        <p><strong>Email:</strong> <a href="mailto:you@example.com">you@example.com</a> · <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/your-link" target="_blank" rel="noopener">your‑link</a> · <strong>GitHub:</strong> <a href="https://github.com/your-handle" target="_blank" rel="noopener">your‑handle</a></p>
+        <p><strong>Email:</strong> <a href="mailto:lavanragulan@gmail.com">you@example.com</a> · <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/lavanragulan/" target="_blank" rel="noopener">your‑link</a> · <strong>GitHub:</strong> <a href="https://github.com/lavanragulan/lavanragulan.github.io" target="_blank" rel="noopener">your‑handle</a></p>
       </div>
     </section>
   </main>
 
   <footer>
     <div class="container">
-      <small>© <span id="year"></span> YOUR NAME. Last updated <span id="lastUpdated"></span>. • This site is lightweight (no frameworks) and prints cleanly to PDF.</small>
+      <small>© <span id="year"></span> Lavan Ragulan. Last updated <span id="lastUpdated"></span>. • This site is lightweight (no frameworks) and prints cleanly to PDF.</small>
     </div>
   </footer>
 
@@ -396,18 +371,5 @@
     // Start with "All"
     setFilter('all');
   </script>
-
-  <!--
-    ===============================
-    QUICK HOW‑TO
-    1) Replace YOUR NAME, links, and placeholders above.
-    2) Put a PDF named resume.pdf next to this file to enable the Download Resume button.
-    3) Host on GitHub Pages:
-       • Create a repo named username.github.io
-       • Add this file as index.html (and resume.pdf)
-       • Commit & push; site goes live at https://username.github.io
-    4) Optional custom domain: add a CNAME file with your domain and point DNS to GitHub Pages.
-    5) Print to PDF for a one‑pager portfolio: Ctrl/Cmd+P.
-  -->
 </body>
 </html>
