--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
-<html lang="en" data-theme="light">
+<html lang="en" data-theme="dark">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Lavan Ragulan — Portfolio</title>
-  <meta name="description" content="Portfolio showcasing projects across data, risk, and consulting — with case studies, skills, and writing samples." />
+  <meta name="description" content="Applying analytics to harmonize data analytics, risk, and business strategy. View projects, case studies, and professional experience." />
   <meta property="og:title" content="Lavan Ragulan — Portfolio" />
-  <meta property="og:description" content="Projects and case studies across data, risk, and consulting." />
+  <meta property="og:description" content=" Showcase of selected analytical projects and writing samples." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://github.com/lavanragulan/lavanragulan.github.io" />
   <meta name="color-scheme" content="light dark" />
@@ -146,7 +146,7 @@
 <body>
   <header>
     <div class="container nav" role="navigation" aria-label="Main">
-      <div class="brand"><span class="dot" aria-hidden="true"></span><span>Lavan Ragulan</span></div>
+      <div class="brand"><span class="dot" aria-hidden="true"></span><span>Lavan Ragulan</span></div> <!-- replace dot here -->
       <nav class="navmenu">
         <a href="#projects" class="btn ghost">Projects</a>
         <a href="#experience" class="btn ghost">Experience</a>
@@ -192,8 +192,8 @@
       <h2 class="section-title">Highlighted Projects</h2>
       <div class="filters" role="toolbar" aria-label="Project filters">
         <button class="filter-btn" data-filter="all" aria-pressed="true">All</button>
-        <button class="filter-btn" data-filter="data">Data</button>
-        <button class="filter-btn" data-filter="risk">Risk</button>
+        <button class="filter-btn" data-filter="data">Data Analytics</button>
+        <button class="filter-btn" data-filter="risk">Writing Samples</button>
         <button class="filter-btn" data-filter="consulting">Consulting</button>
       </div>
 
@@ -326,8 +326,8 @@
     <section id="contact">
       <h2 class="section-title">Contact</h2>
       <div class="card">
-        <p><strong>Based in:</strong> City, Country · Open to roles in Data, Risk, and Consulting</p>
-        <p><strong>Email:</strong> <a href="mailto:lavanragulan@gmail.com">you@example.com</a> · <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/lavanragulan/" target="_blank" rel="noopener">your‑link</a> · <strong>GitHub:</strong> <a href="https://github.com/lavanragulan/lavanragulan.github.io" target="_blank" rel="noopener">your‑handle</a></p>
+        <p><strong>Based in:</strong> Toronto, Canada · Open to roles in Data, Risk, and Consulting</p>
+        <p><strong>Email:</strong> <a href="mailto:lavanragulan@gmail.com">lavanragulan@gmail.com</a> · <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/lavanragulan/" target="_blank" rel="noopener">lavanragulan</a> · <strong>GitHub:</strong> <a href="https://github.com/lavanragulan/lavanragulan.github.io" target="_blank" rel="noopener">lavanragulan</a></p>
       </div>
     </section>
   </main>
@@ -373,3 +373,4 @@
   </script>
 </body>
 </html>
+
